# kfp-vertex-pipelines-facade-pattern

./: README.md  user_guide.md
my-dummy-pipeline/: config.py  run_pipeline.py
my-dummy-pipeline/dummy_sklearn_model/: create_dummy_model.py  dummy_prediction_data.jsonl  model.joblib
my-dummy-pipeline/server_predictor/: new_predictor.py  prediction_utils.py  predictor.py  requirements.txt
my-dummy-pipeline/sklearn_model/: dummy_model.py  dummy_prediction_data.jsonl  model.joblib  prediction_input.jsonl  train.py  training_data.csv
my-dummy-pipeline/src/: requirements.txt  task1.py  task2.py  task3.py  task4.py
my-dummy-pipeline/src/config/: config.py
my-dummy-pipeline/src/tasks/: data_drift_dummy.py  task1.py  task4.py  vertex_monitoring.py
my-dummy-pipeline/src/utils/: utils.py
vp_abstractor/: pyproject.toml
vp_abstractor/src/vp_abstractor/: __init__.py
vp_abstractor/src/vp_abstractor/components/: batch_prediction_step.py  custom_metric_monitorer_step.py  model_upload_step.py
vp_abstractor/src/vp_abstractor/core/: builder.py  component_builder.py  component_factory.py  image_builder.py  image_builders.py  pipeline_builder.py  runner.py
vp_abstractor/src/vp_abstractor/serving/: fastapi_server_template.py
vp_abstractor/src/vp_abstractor/utils/: component_configs.py  dataclasses.py  enums.py
