[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vp_abstractor"
version = "0.5.0"
description = '.'
requires-python = ">=3.8"
dependencies = [
    "kfp>=2.13.0",
    "google-cloud-aiplatform>=1.86.0",
    "google-cloud-storage>=2.19.0",
    "google-cloud-pipeline-components>=2.20.0"
]